<resources>
    <string name="app_name">SQLite</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SQLite</string>
    
    <string name="name">Name</string>
    <string name="profession">Profession</string>
    <string name="age">Age</string>
    
    <string name="menu_cadastre_user">Cadastre of Users</string>
    <string name="menu_list_user">List of User</string>
    <string name="menu_search_user">Search of User</string>
    <string name="menu_clean_db">Clean Data Base</string>
	<string name="menu_exit">Exit</string>
	
	<string name="bn_cadastre">Cadastre</string>

	<string name="bn_confirm">Confirm</string>
	<string name="bn_cancel">Cancel</string>
	<string name="msg_exit">Want to exit?</string>
	
	<string name="msg_no_registration">No registration unless</string>
	<string name="msg_clean_db">Want to clean up the database?</string>
	<string name="msg_fill_fields">Fill in all fields</string>
	<string name="msg_selected_field">Select a field to search</string>
	<string name="msg_enter_valeu">Enter the value for research</string>
	<string name="msg_no_found_user">No user found</string>
	<string name="msg_results">Results</string>
	
</resources>